add counter.js and logic counter

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
 	<div class="container mb-5">
 		<div class="row">
+
+			<!-- Productions -->
 			<div class="col-md-8">
 				<div class="row">
 
@@ -35,11 +37,14 @@
 								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
 
 								<div class="details-wrapper">
+
+									<!-- Counter -->
 									<div class="items counter-wrapper">
 										<div class="items__control" data-action="minus">-</div>
 										<div class="items__current" data-counter>1</div>
 										<div class="items__control" data-action="plus">+</div>
 									</div>
+									<!-- // Counter -->
 
 									<div class="price">
 										<div class="price__weight">180г.</div>
@@ -144,6 +149,8 @@
 
 				</div>
 			</div>
+
+			<!-- Basket -->
 			<div class="col-md-4">
 
 				<!-- Корзина -->
@@ -220,6 +227,7 @@
 	</div>
 
 	<!-- Подключаем скрипты -->
+	<script src="./js/counter.js"></script>
 
 </body>
 
