add cart.js and basic function cart

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 									</div>
 								</div>
 
-								<button data-cart type="button" class="btn btn-block btn-outline-warning">+ в корзину</button>
+								<button data-cart type="button" class="btn btn-block btn-outline-warning">
+									+ в корзину
+								</button>
 
 							</div>
 						</div>
@@ -228,6 +230,7 @@
 
 	<!-- Подключаем скрипты -->
 	<script src="./js/counter.js"></script>
+	<script src="./js/cart.js"></script>
 
 </body>
 
