--- a/index.html
+++ b/index.html
@@ -26,128 +26,11 @@
 
 			<!-- Productions -->
 			<div class="col-md-8">
-				<div class="row">
+				<div class="row" id="products-container">
 
 					<!-- Ролл -->
-					<div class="col-md-6">
-						<div class="card mb-4" data-id="01">
-							<img class="product-img" src="img/roll/philadelphia.jpg" alt="">
-							<div class="card-body text-center">
-								<h4 class="item-title">Филадельфия хит ролл</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
-
-								<div class="details-wrapper">
-
-									<!-- Counter -->
-									<div class="items counter-wrapper">
-										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>1</div>
-										<div class="items__control" data-action="plus">+</div>
-									</div>
-									<!-- // Counter -->
-
-									<div class="price">
-										<div class="price__weight">180г.</div>
-										<div class="price__currency">300 ₽</div>
-									</div>
-								</div>
-
-								<button data-cart type="button" class="btn btn-block btn-outline-warning">
-									+ в корзину
-								</button>
-
-							</div>
-						</div>
-					</div>
-					<!-- // Ролл -->
-
-					<!-- Ролл -->
-					<div class="col-md-6">
-						<div class="card mb-4" data-id="02">
-							<img class="product-img" src="img/roll/california-tempura.jpg" alt="">
-							<div class="card-body text-center">
-								<h4 class="item-title">Калифорния темпура</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
-
-								<div class="details-wrapper">
-									<div class="items counter-wrapper">
-										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>1</div>
-										<div class="items__control" data-action="plus">+</div>
-									</div>
-
-									<div class="price">
-										<div class="price__weight">205г.</div>
-										<div class="price__currency">250 ₽</div>
-									</div>
-								</div>
-
-								<button data-cart type="button" class="btn btn-block btn-outline-warning">+ в корзину</button>
-
-							</div>
-						</div>
-					</div>
-					<!-- // Ролл -->
-
-					<!-- Ролл -->
-					<div class="col-md-6">
-						<div class="card mb-4" data-id="03">
-							<img class="product-img" src="img/roll/zapech-california.jpg" alt="">
-							<div class="card-body text-center">
-								<h4 class="item-title">Запеченый ролл «Калифорния»</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
-
-								<div class="details-wrapper">
-									<div class="items counter-wrapper">
-										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>1</div>
-										<div class="items__control" data-action="plus">+</div>
-									</div>
-
-									<div class="price">
-										<div class="price__weight">182г.</div>
-										<div class="price__currency">230 ₽</div>
-									</div>
-
-								</div>
-
-								<button data-cart type="button" class="btn btn-block btn-outline-warning">+ в корзину</button>
-
-							</div>
-						</div>
-					</div>
-					<!-- // Ролл -->
-
-					<!-- Ролл -->
-					<div class="col-md-6">
-						<div class="card mb-4" data-id="04">
-							<img class="product-img" src="img/roll/philadelphia.jpg" alt="">
-							<div class="card-body text-center">
-								<h4 class="item-title">Филадельфия</h4>
-								<p><small data-items-in-box class="text-muted">6 шт.</small></p>
-
-								<div class="details-wrapper">
-									<div class="items counter-wrapper">
-										<div class="items__control" data-action="minus">-</div>
-										<div class="items__current" data-counter>1</div>
-										<div class="items__control" data-action="plus">+</div>
-									</div>
-
-									<div class="price">
-										<div class="price__weight">230г.</div>
-										<div class="price__currency">320 ₽</div>
-									</div>
-
-								</div>
-
-								<button data-cart type="button" class="btn btn-block btn-outline-warning">
-									+ в корзину
-								</button>
-
-							</div>
-						</div>
-					</div>
-					<!-- // Ролл -->
+					
+					<!-- // Ролл -->					
 
 				</div>
 			</div>
@@ -170,7 +53,11 @@
 
 						<!-- Стоимость заказа -->
 						<div class="cart-total">
-							<p><span class="h5">Доставка:</span> <span class="delivery-cost free">бесплатно</span> </p>
+							<p data-cart-delivery class="none">
+								<span class="h5">Доставка:</span>
+								<span class="delivery-cost">250 ₽</span> </br>
+								<span class="small gray"> Free of charge when ordering from 600  </span>
+							</p>
 							<p><span class="h5">Итого:</span> <span class="total-price">0</span> <span class="rouble">₽</span></p>
 						</div>
 						<!-- // Стоимость заказа -->
@@ -198,6 +85,7 @@
 	</div>
 
 	<!-- Подключаем скрипты -->
+	<script src="./js/renderProduct.js"></script>
 	<script src="./js/calcCartPrice.js"></script>
 	<script src="./js/toggleCartStatus.js"></script>
 	<script src="./js/counter.js"></script>
